--- a/index.html
+++ b/index.html
@@ -6,15 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Italy</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Archivo:wght@300&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <header>
-      <figure id="banner">
-        <img
-          src="images/homebanner.jpeg"
-        />
-        <figcaption>italy</figcaption>
-      </figure>
-    </header>
+    <div id="wrapper">
+      <header>
+        <img src="images/homebanner.jpeg" />
+        <div id="header-overlay">
+          <h1 id="header-text">Grapevine Travel Co.</h1>
+        </div>
+      </header>
+      <nav>
+        <ul>
+          <li>Home</li>
+          <li>Destinations</li>
+          <li>Packages</li>
+          <li>Contact Us</li>
+        </ul>
+      </nav>
+    </div>
   </body>
 </html>
