nav stylized, added new pages

--- a/packages.html
+++ b/packages.html
@@ -22,9 +22,9 @@
       </header>
       <nav>
         <ul>
-          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="destinations.html">Destinations</a></li>
-          <li><a href="packages.html">Packages</a></li>
+          <li><a class="active" href="packages.html">Packages</a></li>
           <li><a href="contact-us.html">Contact Us</a></li>
         </ul>
       </nav>
