--- a/contact-us.html
+++ b/contact-us.html
@@ -22,10 +22,10 @@
       </header>
       <nav>
         <ul>
-          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="destinations.html">Destinations</a></li>
           <li><a href="packages.html">Packages</a></li>
-          <li><a href="contact-us.html">Contact Us</a></li>
+          <li><a class="active" href="contact-us.html">Contact Us</a></li>
         </ul>
       </nav>
     </div>
