--- a/destinations.html
+++ b/destinations.html
@@ -22,8 +22,8 @@
       </header>
       <nav>
         <ul>
-          <li><a class="active" href="index.html">Home</a></li>
-          <li><a href="destinations.html">Destinations</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a class="active" href="destinations.html">Destinations</a></li>
           <li><a href="packages.html">Packages</a></li>
           <li><a href="contact-us.html">Contact Us</a></li>
         </ul>
