--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Italy</title>
+    <title>Grapevine Travel Co.</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Archivo:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -28,6 +33,56 @@
           <li><a href="contact-us.html">Contact Us</a></li>
         </ul>
       </nav>
+      <main>
+        <h1>Explore the wonders of Italy with Grapevine Travel Co.!</h1>
+        <p>
+          We're big fans of Italy here at Grapevine Travel Co. Thanks to our
+          dedicated team in Italy we can take you beyond the basics to discover
+          the country's hidden gems. Whether it's your first Italian vacation or
+          your tenth, we can create the perfect itinerary for you.
+        </p>
+        <p>
+          You can travel Italy in classic "semi-independent" Grapevine Travel
+          Co. style with the benefit of our local staff's assistance before and
+          during your trip, join one of our small group tours or take a private
+          escorted tour with Justin, our Italy country manager. Whichever style
+          you choose, your Italy vacation package is guaranteed to surprise and
+          delight in equal measure.
+        </p>
+        <h2>Popular Italy Vacation Itineraries</h2>
+        <p>
+          Italy's a country that requires repeat visits. Our Italy vacation
+          ideas have something for you whether it's your first time or your
+          fifth. Our suggested itineraries for Italy and neighboring countries
+          allow you to enjoy a multi-destination tour with ease. Our vacation
+          packages make traveling in Italy truly hassle-free. We take care of
+          getting you from place to place, accommodation, excursions, and
+          activities.
+        </p>
+        <h2>We're Italian vacation experts</h2>
+        <p>
+          We're more than an Italy travel agent. We are Italian vacation
+          experts. Our seamless and stress-free customized Italy vacation
+          packages start with inside-out knowledge of our destinations. The
+          carefully chosen lodgings we offer in Italy range from farm stays to
+          luxurious palazzos. Our English-speaking local staff, drivers and
+          guides are on-hand to assist. Whether it's about what to do and see,
+          whether it's on a private tour, an organized excursion or just
+          suggestions on how to spend some free time. Wherever you want to
+          travel in Italy, we can make it happen. A travel agency or the mass
+          market tour operators might make a few bookings for you. But we'll be
+          with you every step of the way to ensure a spectacular trip that
+          you'll remember forever. With a country so densely packed with riches,
+          there will always be somewhere new to visit. Even if your desired
+          destination isn't listed here, rest assured we can still include it in
+          your custom trip plan. <a href="contact-us.html">Contact us</a> for a
+          free travel consultation. We'll start planning the perfect trip to
+          Italy, just for you.
+        </p>
+      </main>
+      <footer>
+        <p>&#169; 2021 &#8226; Grapevine Travel Co. &#8226; Built by Justin Dennon</p>
+      </footer>
     </div>
   </body>
 </html>
