added content to pages

--- a/destinations.html
+++ b/destinations.html
@@ -11,8 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=Archivo:wght@300&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="wrapper">
@@ -26,10 +29,50 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a class="active" href="destinations.html">Destinations</a></li>
+          <li><a href="virtual-tour.html">Virtual Tour</a></li>
           <li><a href="packages.html">Packages</a></li>
           <li><a href="contact-us.html">Contact Us</a></li>
         </ul>
       </nav>
+      <main>
+        <h1>Destinations</h1>
+        <div class="destinations-grid">
+          <div class="column-1">
+            <figure>
+              <img src="images/rome.jpeg">
+              <figcaption>Rome</figcaption>
+            </figure>
+            <figure>
+              <img src="images/florence.jpeg">
+              <figcaption>Florence</figcaption>
+            </figure>
+            <figure>
+              <img src="images/naples.jpeg">
+              <figcaption>Naples</figcaption>
+            </figure>
+          </div>
+          <div class="column-2">
+            <figure>
+              <img src="images/capri.jpeg">
+              <figcaption>Capri</figcaption>
+            </figure>
+            <figure>
+              <img src="images/siena.png">
+              <figcaption>Siena</figcaption>
+            </figure>
+            <figure>
+              <img src="images/venice.jpeg">
+              <figcaption>Venice</figcaption>
+            </figure>
+          </div>
+        </div>
+      </main>
+      <footer>
+        <p>
+          &#169; 2021 &#8226; Grapevine Travel Co. &#8226; Built by Justin
+          Dennon
+        </p>
+      </footer>
     </div>
   </body>
 </html>
