--- a/index.html
+++ b/index.html
@@ -29,12 +29,14 @@
         <ul>
           <li><a class="active" href="index.html">Home</a></li>
           <li><a href="destinations.html">Destinations</a></li>
+          <li><a href="virtual-tour.html">Virtual Tour</a></li>
           <li><a href="packages.html">Packages</a></li>
           <li><a href="contact-us.html">Contact Us</a></li>
         </ul>
       </nav>
       <main>
         <h1>Explore the wonders of Italy with Grapevine Travel Co.!</h1>
+        <img class ="home-img" src="images/coast.jpeg">
         <p>
           We're big fans of Italy here at Grapevine Travel Co. Thanks to our
           dedicated team in Italy we can take you beyond the basics to discover
