--- a/packages.html
+++ b/packages.html
@@ -26,6 +26,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="destinations.html">Destinations</a></li>
+          <li><a href="virtual-tour.html">Virtual Tour</a></li>
           <li><a class="active" href="packages.html">Packages</a></li>
           <li><a href="contact-us.html">Contact Us</a></li>
         </ul>
