--- a/virtual-tour.html
+++ b/virtual-tour.html
@@ -11,8 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=Archivo:wght@300&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="wrapper">
@@ -26,11 +29,23 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="destinations.html">Destinations</a></li>
-          <li><a href="virtual-tour.html">Virtual Tour</a></li>
+          <li><a class="active" href="virtual-tour.html">Virtual Tour</a></li>
           <li><a href="packages.html">Packages</a></li>
-          <li><a class="active" href="contact-us.html">Contact Us</a></li>
+          <li><a href="contact-us.html">Contact Us</a></li>
         </ul>
       </nav>
+      <main>
+        <h1>Virtual Tour</h1>
+        <iframe class ="video"
+          src="https://www.youtube.com/embed/FlRwssZYRM0"
+        ></iframe>
+      </main>
+      <footer>
+        <p>
+          &#169; 2021 &#8226; Grapevine Travel Co. &#8226; Built by Justin
+          Dennon
+        </p>
+      </footer>
     </div>
   </body>
 </html>
