added vacation packages

--- a/packages.html
+++ b/packages.html
@@ -11,8 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=Archivo:wght@300&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="wrapper">
@@ -31,6 +34,98 @@
           <li><a href="contact-us.html">Contact Us</a></li>
         </ul>
       </nav>
+      <main>
+        <h1>Vacation Packages</h1>
+        <div class="vacation-package">
+          <div class="vacation-left">
+            <h2>Rome Cavalieri</h2>
+            <img src="images/cavalieri.jpeg" />
+          </div>
+          <div class="vacation-right">
+            <div class="spacer"></div>
+            <p>
+              <a target="_blank" href="https://romecavalieri.com/"
+                >Rome Cavalieri, A Waldorf Astoria Hotel</a
+              >
+              best exemplifies the dual nature of the Eternal City’s personality
+              — decadent dolce vita and a magnetic sense of history. Its Monte
+              Mario location literally sets it apart from the rest of the city,
+              in a lush and green 15-acre park with panoramic views of Rome and
+              Vatican City, making it a great luxury hideout.
+            </p>
+            <p>Starting at $1499</p>
+            <p>
+              Rental cars available from
+              <a
+                target="_blank"
+                href="https://www.kayak.com/cars/Rome,Italy-c25465/2021-05-13/2021-05-20;map?fs=carclass=SMALL&sort=rank_a"
+                >Kayak</a
+              >
+            </p>
+          </div>
+        </div>
+        <div class="vacation-package">
+          <div class="vacation-left">
+            <h2>Eurostars Hotel Excelsior</h2>
+            <img src="images/excelsior.jpeg" />
+          </div>
+          <div class="vacation-right">
+            <div class="spacer"></div>
+            <p>
+              The
+              <a
+                target="_blank"
+                href="https://www.eurostarshotels.it/eurostars-hotel-excelsior.html?td=l00rl00&id_referer=GMB&utm_source=google&utm_medium=gmb&utm_campaign=googlemb"
+                >Eurostars Hotel Excelsior</a
+              >
+              is located close to Castel dell'Ovo, with spectacular panoramic
+              views of Vesuvius, the Gulf of Naples and the paradise islands of
+              Ischia and Capri. Every space of this classic building is
+              elegantly decorated, with Murano crystal lamps, Carrara marbles,
+              fabrics and silk coverings. The Eurostars Hotel Excelsior offers
+              beautiful and luxurious event rooms with views of Vesuvius and the
+              Gulf, with large, stylish windows and refined decor.
+            </p>
+            <p>Starting at $959</p>
+            <p>
+              Rental cars available from
+              <a
+                target="_blank"
+                href="https://www.autoeurope.com/car-rental-naples/"
+                >Auto Europe</a
+              >
+            </p>
+          </div>
+        </div>
+        <div class="vacation-package">
+          <div class="vacation-left">
+            <h2>Grand Hotel Continental Siena</h2>
+            <img src="images/grand.jpeg" />
+          </div>
+          <div class="vacation-right">
+            <div class="spacer"></div>
+            <p>
+              Set in a 17th-century building, <a target="_blank" href="https://www.starhotelscollezione.com/en/our-hotels/grand-hotel-continental-siena/">Grand Hotel Continental Siena -
+              Starhotels Collezione</a> is a luxury 5-star hotel in the historical
+              center of Siena, 800 feet from Piazza Campo square. It offers
+              elegant rooms with frescoed ceilings and period furnishings.
+              Featuring valuable artwork, rooms and suites here feature
+              porcelain and Travertine marble details, and original Tuscan
+              terracotta floors.
+            </p>
+            <p>Starting at $1299</p>
+            <p>
+              Rental cars available from <a target="_blank" href="https://www.hertz.com/p/car-rental/italy/siena">Hertz</a>
+            </p>
+          </div>
+        </div>
+      </main>
+      <footer>
+        <p>
+          &#169; 2021 &#8226; Grapevine Travel Co. &#8226; Built by Justin
+          Dennon
+        </p>
+      </footer>
     </div>
   </body>
 </html>
