--- a/contact-us.html
+++ b/contact-us.html
@@ -20,7 +20,7 @@
   <body>
     <div id="wrapper">
       <header>
-        <img src="images/homebanner.jpg" />
+        <img src="images/homebanner.jpg" alt="landscape image of Italy" />
         <div id="header-overlay">
           <h1 id="header-text">Grapevine Travel Co.</h1>
         </div>
@@ -91,23 +91,22 @@
             <legend>Travel Questions</legend>
             <span>Where are you traveling from?</span>
             <label
-              ><input type="radio" name="from" value="US" required />United States</label
+              ><input type="radio" name="from" value="US" required />United
+              States</label
             >
-            <label
-              ><input type="radio" name="from" value="EU" />Europe</label
-            >
-            <label
-              ><input type="radio" name="from" value="OT" />Other</label
-            >
+            <label><input type="radio" name="from" value="EU" />Europe</label>
+            <label><input type="radio" name="from" value="OT" />Other</label>
             <span>What places are you planning on traveling to?</span>
-            <label
-              ><input type="checkbox" name="rm" value="Rome" />Rome</label
-            >
+            <label><input type="checkbox" name="rm" value="Rome" />Rome</label>
             <label
               ><input type="checkbox" name="cap" value="Capri" />Capri</label
             >
             <label
-              ><input type="checkbox" name="fl" value="Florence" />Florence</label
+              ><input
+                type="checkbox"
+                name="fl"
+                value="Florence"
+              />Florence</label
             >
             <label
               ><input type="checkbox" name="si" value="Siena" />Siena</label
