--- a/destinations.html
+++ b/destinations.html
@@ -20,7 +20,7 @@
   <body>
     <div id="wrapper">
       <header>
-        <img src="images/homebanner.jpg" />
+        <img src="images/homebanner.jpg" alt="landscape image of Italy" />
         <div id="header-overlay">
           <h1 id="header-text">Grapevine Travel Co.</h1>
         </div>
@@ -39,29 +39,29 @@
         <div class="destinations-grid">
           <div class="column-1">
             <figure>
-              <img src="images/rome.jpeg">
+              <img src="images/rome.jpeg" />
               <figcaption>Rome</figcaption>
             </figure>
             <figure>
-              <img src="images/florence.jpeg">
+              <img src="images/florence.jpeg" />
               <figcaption>Florence</figcaption>
             </figure>
             <figure>
-              <img src="images/naples.jpeg">
+              <img src="images/naples.jpeg" />
               <figcaption>Naples</figcaption>
             </figure>
           </div>
           <div class="column-2">
             <figure>
-              <img src="images/capri.jpeg">
+              <img src="images/capri.jpeg" />
               <figcaption>Capri</figcaption>
             </figure>
             <figure>
-              <img src="images/siena.png">
+              <img src="images/siena.png" />
               <figcaption>Siena</figcaption>
             </figure>
             <figure>
-              <img src="images/venice.jpeg">
+              <img src="images/venice.jpeg" />
               <figcaption>Venice</figcaption>
             </figure>
           </div>
