--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <div id="wrapper">
       <header>
-        <img src="images/homebanner.jpg" />
+        <img src="images/homebanner.jpg" alt="landscape image of Italy" />
         <div id="header-overlay">
           <h1 id="header-text">Grapevine Travel Co.</h1>
         </div>
@@ -36,7 +36,11 @@
       </nav>
       <main>
         <h1>Explore the wonders of Italy with Grapevine Travel Co.!</h1>
-        <img class ="home-img" src="images/coast.jpeg">
+        <img
+          class="home-img"
+          src="images/coast.jpeg"
+          alt="a landscape of the beautiful coast of Italy"
+        />
         <p>
           We're big fans of Italy here at Grapevine Travel Co. Thanks to our
           dedicated team in Italy we can take you beyond the basics to discover
@@ -83,7 +87,10 @@
         </p>
       </main>
       <footer>
-        <p>&#169; 2021 &#8226; Grapevine Travel Co. &#8226; Built by Justin Dennon</p>
+        <p>
+          &#169; 2021 &#8226; Grapevine Travel Co. &#8226; Built by Justin
+          Dennon
+        </p>
       </footer>
     </div>
   </body>
