--- a/packages.html
+++ b/packages.html
@@ -20,7 +20,7 @@
   <body>
     <div id="wrapper">
       <header>
-        <img src="images/homebanner.jpg" />
+        <img src="images/homebanner.jpg" alt="landscape image of Italy" />
         <div id="header-overlay">
           <h1 id="header-text">Grapevine Travel Co.</h1>
         </div>
@@ -39,7 +39,10 @@
         <div class="vacation-package">
           <div class="vacation-left">
             <h2>Rome Cavalieri</h2>
-            <img src="images/cavalieri.jpeg" />
+            <img
+              src="images/cavalieri.jpeg"
+              alt="inside of the Rome Cavalieri hotel"
+            />
           </div>
           <div class="vacation-right">
             <div class="spacer"></div>
@@ -67,7 +70,10 @@
         <div class="vacation-package">
           <div class="vacation-left">
             <h2>Eurostars Hotel Excelsior</h2>
-            <img src="images/excelsior.jpeg" />
+            <img
+              src="images/excelsior.jpeg"
+              alt="a beauitful view from Eurostars Hotel Excelsior"
+            />
           </div>
           <div class="vacation-right">
             <div class="spacer"></div>
@@ -100,22 +106,34 @@
         <div class="vacation-package">
           <div class="vacation-left">
             <h2>Grand Hotel Continental Siena</h2>
-            <img src="images/grand.jpeg" />
+            <img
+              src="images/grand.jpeg"
+              alt="image of the beautiful interior at Grand Hotel Continental Siena"
+            />
           </div>
           <div class="vacation-right">
             <div class="spacer"></div>
             <p>
-              Set in a 17th-century building, <a target="_blank" href="https://www.starhotelscollezione.com/en/our-hotels/grand-hotel-continental-siena/">Grand Hotel Continental Siena -
-              Starhotels Collezione</a> is a luxury 5-star hotel in the historical
-              center of Siena, 800 feet from Piazza Campo square. It offers
-              elegant rooms with frescoed ceilings and period furnishings.
-              Featuring valuable artwork, rooms and suites here feature
-              porcelain and Travertine marble details, and original Tuscan
-              terracotta floors.
+              Set in a 17th-century building,
+              <a
+                target="_blank"
+                href="https://www.starhotelscollezione.com/en/our-hotels/grand-hotel-continental-siena/"
+                >Grand Hotel Continental Siena - Starhotels Collezione</a
+              >
+              is a luxury 5-star hotel in the historical center of Siena, 800
+              feet from Piazza Campo square. It offers elegant rooms with
+              frescoed ceilings and period furnishings. Featuring valuable
+              artwork, rooms and suites here feature porcelain and Travertine
+              marble details, and original Tuscan terracotta floors.
             </p>
             <p>Starting at $1299</p>
             <p>
-              Rental cars available from <a target="_blank" href="https://www.hertz.com/p/car-rental/italy/siena">Hertz</a>
+              Rental cars available from
+              <a
+                target="_blank"
+                href="https://www.hertz.com/p/car-rental/italy/siena"
+                >Hertz</a
+              >
             </p>
           </div>
         </div>
