--- a/virtual-tour.html
+++ b/virtual-tour.html
@@ -20,7 +20,7 @@
   <body>
     <div id="wrapper">
       <header>
-        <img src="images/homebanner.jpg" />
+        <img src="images/homebanner.jpg" alt="landscape image of Italy" />
         <div id="header-overlay">
           <h1 id="header-text">Grapevine Travel Co.</h1>
         </div>
@@ -36,7 +36,8 @@
       </nav>
       <main>
         <h1>Virtual Tour</h1>
-        <iframe class ="video"
+        <iframe
+          class="video"
           src="https://www.youtube.com/embed/FlRwssZYRM0"
         ></iframe>
       </main>
