--- a/thank-you.html
+++ b/thank-you.html
@@ -21,7 +21,7 @@
   <body>
     <div id="wrapper">
       <header>
-        <img src="images/homebanner.jpg" />
+        <img src="images/homebanner.jpg" alt="landscape image of Italy" />
         <div id="header-overlay">
           <h1 id="header-text">Grapevine Travel Co.</h1>
         </div>
@@ -40,7 +40,10 @@
         <p>You will be redirected shortly.</p>
       </main>
       <footer>
-        <p>&#169; 2021 &#8226; Grapevine Travel Co. &#8226; Built by Justin Dennon</p>
+        <p>
+          &#169; 2021 &#8226; Grapevine Travel Co. &#8226; Built by Justin
+          Dennon
+        </p>
       </footer>
     </div>
   </body>
